--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: engelsiz_yollar
 description: A new Flutter project.
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -9,7 +9,22 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.0.1
-    
+  mobx: ^2.0.1
+  awesome_dialog: ^2.0.0-nullsafety.1
+  bot_toast: ^4.0.1
+  build_runner: ^1.12.2
+  collection: ^1.15.0
+  crypto: ^3.0.0
+  dio: ^4.0.0
+  flutter_mobx: ^2.0.0
+  font_awesome_flutter: ^9.0.0
+  intl: ^0.17.0
+  mobx_codegen: ^2.0.1+3
+  package_info: ^2.0.0
+  pedantic: ^1.11.0
+  provider: ^5.0.0
+  shared_preferences: ^2.0.5
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
