--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,11 @@ dependencies:
   provider: ^5.0.0
   shared_preferences: ^2.0.5
   url_launcher: ^6.0.3
+  firebase_core: ^1.0.3
+  firebase_analytics: ^8.0.0
+  firebase_auth: ^1.1.0
+  firebase_storage: ^8.0.3
+  cloud_firestore: ^1.0.5
 
 dev_dependencies:
   flutter_test:
