--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   firebase_auth: ^1.1.0
   firebase_storage: ^8.0.3
   cloud_firestore: ^1.0.5
+  geolocator: ^7.0.3
+  uuid: ^3.0.4
+  path_provider: ^2.0.1
+  image: ^3.0.2
+  image_picker: ^0.7.4
 
 dev_dependencies:
   flutter_test:
