--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path_provider: ^2.0.1
   image: ^3.0.2
   image_picker: ^0.7.4
+  vector_math: ^2.1.0
 
 dev_dependencies:
   flutter_test:
