--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   image: ^3.0.2
   image_picker: ^0.7.4
   vector_math: ^2.1.0
+  vibration: ^1.7.3
 
 dev_dependencies:
   flutter_test:
