--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,32 +10,33 @@ dependencies:
   awesome_dialog: ^2.0.0-nullsafety.1
   bot_toast: ^4.0.1
   build_runner: ^1.12.2
+  cloud_firestore: ^1.0.5
   collection: ^1.15.0
   crypto: ^3.0.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
+  firebase_analytics: ^8.0.0
+  firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
+  firebase_storage: ^8.0.3
   flutter_login: ^1.1.0
   flutter_mobx: ^2.0.0
+  flutter_tts: ^2.1.0
   font_awesome_flutter: ^9.0.0
+  geolocator: ^7.0.3
   google_maps_flutter: ^2.0.1
+  image: ^3.0.2
+  image_picker: ^0.7.4
   intl: ^0.17.0
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   package_info: ^2.0.0
+  path_provider: ^2.0.1
   pedantic: ^1.11.0
   provider: ^5.0.0
   shared_preferences: ^2.0.5
   url_launcher: ^6.0.3
-  firebase_core: ^1.0.3
-  firebase_analytics: ^8.0.0
-  firebase_auth: ^1.1.0
-  firebase_storage: ^8.0.3
-  cloud_firestore: ^1.0.5
-  geolocator: ^7.0.3
   uuid: ^3.0.4
-  path_provider: ^2.0.1
-  image: ^3.0.2
-  image_picker: ^0.7.4
   vector_math: ^2.1.0
   vibration: ^1.7.3
 
