app name changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
   <uses-permission android:name="android.permission.VIBRATE"/>
    <application
-        android:label="engelsiz_yollar"
+        android:label="engelsiz yollar"
         android:icon="@mipmap/ic_launcher">
 
           <meta-data
